# mfaws

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  cli-helpgen.sh  readme.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
e2e/: main.js  package-lock.json  package.json  readme.md  tsconfig.json
e2e/__snapshots__/src/: index.test.ts.md  index.test.ts.snap
e2e/fixtures/: credentials
e2e/src/: index.test.ts  utils.ts
src/: cli.rs  config.rs  creds.rs  logger.rs  main.rs  profile.rs  sts.rs  utils.rs
src/clean/: mod.rs
src/cmds/: assume_role.rs  clean.rs  clear.rs  list.rs  mod.rs  session_token.rs  sts.rs
src/sts/: assume_role.rs  config.rs  mod.rs  session_token.rs
