[package]
name = "mfaws"
version = "0.2.1"
edition = "2021"
authors = ["Eric Egli"]
description = "A CLI tool to manage AWS credentials for MFA-enabled accounts"
repository = "https://github.com/eegli/mfaws"
homepage = "https://github.com/eegli/mfaws"
license = "MIT"
readme = "readme.md"
keywords = ["cli", "aws", "mfa", "credentials", "sts"]
categories = ["command-line-utilities"]
exclude = [".github/*"]

[profile.release]
opt-level = "z"
panic = "abort"

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
aws-config = "0.55.0"
aws-credential-types = { version = "0.55.0", features = [
    "hardcoded-credentials",
] }
aws-sdk-sts = "0.25.0"
aws-smithy-types = "0.55.0"
clap = { version = "4.2.1", features = ["derive", "env"] }
dirs = "5.0.0"
log = "0.4.17"
rust-ini = { version = "0.18.0", features = ["case-insensitive"] }
simplelog = "0.12.1"
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
