[package]
name = "mfaws"
version = "0.4.0"
edition = "2021"
authors = ["Eric Egli"]
description = "A CLI tool to manage AWS credentials for MFA-enabled accounts"
repository = "https://github.com/eegli/mfaws"
homepage = "https://github.com/eegli/mfaws"
license = "MIT"
readme = "readme.md"
keywords = ["cli", "aws", "mfa", "credentials", "sts"]
categories = ["command-line-utilities"]
exclude = [".github/*"]

[profile.release]
opt-level = "z"
panic = "abort"

[features]
e2e_test = []

[dependencies]
anyhow = "1.0"
aws-credential-types = "1.2"
aws-sdk-sts = "1.50"
aws-smithy-types = "1.2"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
log = "0.4.22"
rust-ini = { version = "0.21", features = ["case-insensitive"] }
simplelog = "0.12"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
